// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> renders with as param 1`] = `
.c0 {
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span>
    tooltip
  </span>
</div>
`;

exports[`<Tooltip /> renders with as param 2`] = `
.c1 {
  box-sizing: border-box;
  pointer-events: none;
  font: 400 12px 'Roboto';
  background: #2C2C2C;
  border-radius: 4px;
  color: #fff;
  padding: 0.5rem;
  position: absolute;
  white-space: nowrap;
  top: 94px;
  left: 150px;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
}

.c1:before {
  background: no-repeat url("#");
  background-size: 100% auto;
  width: 18px;
  height: 6px;
  pointer-events: none;
  content: '';
  position: absolute;
}

.c1:before {
  bottom: 0;
  left: 50%;
  margin-bottom: 5px;
  -webkit-transform: translate(-50%,10px);
  -ms-transform: translate(-50%,10px);
  transform: translate(-50%,10px);
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

.c0 {
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="c1"
    to="top"
  >
    Hola mundo
  </div>
  <span>
    tooltip
  </span>
</div>
`;

exports[`<Tooltip /> renders with to param 1`] = `
.c0 {
  cursor: pointer;
}

<span
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span>
    tooltip
  </span>
</span>
`;

exports[`<Tooltip /> renders with to param 2`] = `
.c1 {
  box-sizing: border-box;
  pointer-events: none;
  font: 400 12px 'Roboto';
  background: #2C2C2C;
  border-radius: 4px;
  color: #fff;
  padding: 0.5rem;
  position: absolute;
  white-space: nowrap;
  top: 206px;
  left: 150px;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
}

.c1:before {
  background: no-repeat url("#");
  background-size: 100% auto;
  width: 18px;
  height: 6px;
  pointer-events: none;
  content: '';
  position: absolute;
}

.c1:before {
  top: 0;
  left: 50%;
  -webkit-transform: translate(-10px,0) rotate(180deg);
  -ms-transform: translate(-10px,0) rotate(180deg);
  transform: translate(-10px,0) rotate(180deg);
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

.c0 {
  cursor: pointer;
}

<span
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="c1"
    to="bottom"
  >
    Hola mundo
  </div>
  <span>
    tooltip
  </span>
</span>
`;

exports[`<Tooltip /> renders without crashing 1`] = `
.c0 {
  cursor: pointer;
}

<span
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span>
    tooltip
  </span>
</span>
`;

exports[`<Tooltip /> renders without crashing 2`] = `
.c1 {
  box-sizing: border-box;
  pointer-events: none;
  font: 400 12px 'Roboto';
  background: #2C2C2C;
  border-radius: 4px;
  color: #fff;
  padding: 0.5rem;
  position: absolute;
  white-space: nowrap;
  top: 94px;
  left: 150px;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
}

.c1:before {
  background: no-repeat url("#");
  background-size: 100% auto;
  width: 18px;
  height: 6px;
  pointer-events: none;
  content: '';
  position: absolute;
}

.c1:before {
  bottom: 0;
  left: 50%;
  margin-bottom: 5px;
  -webkit-transform: translate(-50%,10px);
  -ms-transform: translate(-50%,10px);
  transform: translate(-50%,10px);
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
}

.c0 {
  cursor: pointer;
}

<span
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="c1"
    to="top"
  >
    Hola mundo
  </div>
  <span>
    tooltip
  </span>
</span>
`;
